attempt to fix: circle alignment

--- a/src/pages/GoalsPage/GoalsPage.scss
+++ b/src/pages/GoalsPage/GoalsPage.scss
@@ -69,27 +69,23 @@
   }
 }
 
-.goal-dropdown {
-  position: relative;
-  width: 28px;
-  height: 28px;
+.goal-dropdown,.goal-dd-inner,.goal-dd-outer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.goal-dd-inner {
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  position: absolute;
-  top: 3.5px;
-  left: 3.5px;
+.goal-dd-inner, .goal-dd-outer {
+  border-radius: 11px;
+  width: 21px;
+  height: 20px;
 }
 
 .goal-dd-outer {
   width: 28px;
   height: 28px;
-  border: solid;
-  border-width: 1.4px;
-  border-radius: 50%;
+  border-radius: 22px;
+  border: 1px solid;
 }
 
 #addGoal-btn {
